--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 # conao3's global .gitignore at
 # http://dotfiles.conao3.com/gitignore
 
-# make temporary folder
-/.make
-
-# Emacs Lisp compiled files
+*-autoloads.el
 *.elc
-
-# Dependency
-/ddskk
-/posframe
+/.cask
